--- a/debian/changelog
+++ b/debian/changelog
@@ -1,173 +1,5 @@
-calamares-settings-nitrux (1.1.37) nxos; urgency=medium
+calamares-qml-settings-nitrux (0.0.1) nxos; urgency=medium
 
-  * Adjust image with logos.
+  * Create package.
 
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 Jan 2020 19:58:00 -0500
-
-calamares-settings-nitrux (1.1.37) nxos; urgency=medium
-
-  * Remove version from desktop launcher.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 Jan 2020 18:59:00 -0500
-
-calamares-settings-nitrux (1.1.36) nxos; urgency=medium
-
-  * Adjust spacing copyright image.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 Jan 2020 17:37:00 -0500
-
-calamares-settings-nitrux (1.1.35) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 Jan 2020 07:21:00 -0500
-
-calamares-settings-nitrux (1.1.34) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 Jan 2020 07:09:00 -0500
-
-calamares-settings-nitrux (1.1.33) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 Jan 2020 06:48:00 -0500
-
-calamares-settings-nitrux (1.1.32) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 19 Jan 2020 05:47:00 -0500
-
-calamares-settings-nitrux (1.1.31) nxos; urgency=medium
-
-  * Remove version number from desktop icon.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sat, 04 Jan 2020 19:58:00 -0500
-
-calamares-settings-nitrux (1.1.30) nxos; urgency=medium
-
-  * Set default shell to zsh.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 21:10:00 -0500
-
-calamares-settings-nitrux (1.1.29) nxos; urgency=medium
-
-  * Remove log helper.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 14:52:00 -0500
-
-calamares-settings-nitrux (1.1.28) nxos; urgency=medium
-
-  * A typo.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 03:16:00 -0500
-
-calamares-settings-nitrux (1.1.27) nxos; urgency=medium
-
-  * Whatever.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 02:51:00 -0500
-
-calamares-settings-nitrux (1.1.27) nxos; urgency=medium
-
-  * Whatever.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 02:46:00 -0500
- 
-calamares-settings-nitrux (1.1.26) nxos; urgency=medium
-
-  * Remove unnecessary modules.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 02:32:00 -0500
-
-calamares-settings-nitrux (1.1.26) nxos; urgency=medium
-
-  * Make helper script not Lubuntu specific.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 01:57:00 -0500
-
-calamares-settings-nitrux (1.1.25) nxos; urgency=medium
-
-  * Make helper script not Lubuntu specific.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Mon, 16 Dec 2019 00:08:00 -0500
-
-calamares-settings-nitrux (1.1.24) nxos; urgency=medium
-
-  * Make helper script not Lubuntu specific.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 15 Dec 2019 23:25:00 -0500
-
-calamares-settings-nitrux (1.1.23) nxos; urgency=medium
-
-  * Add more modules.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 15 Dec 2019 22:54:00 -0500
-
-calamares-settings-nitrux (1.1.22) nxos; urgency=medium
-
-  * Add initramfs.conf, change defualtDesktopEnvironment.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 15 Dec 2019 22:36:00 -0500
-
-calamares-settings-nitrux (1.1.21) nxos; urgency=medium
-
-  * Set machineid.conf values to false.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 15 Dec 2019 07:39:00 -0500
-
-calamares-settings-nitrux (1.1.20) nxos; urgency=medium
-
-  * Set machineid.conf values to false.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 15 Dec 2019 07:24:00 -0500
-
-calamares-settings-nitrux (1.1.19) nxos; urgency=medium
-
-  * Don't remove calamares-settings-nitrux.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sat, 14 Dec 2019 17:01:00 -0500
-
-calamares-settings-nitrux (1.1.18) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sat, 14 Dec 2019 16:12:00 -0500
-
-calamares-settings-nitrux (1.1.17) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Tue, 10 Dec 2019 18:23:00 -0500
-
-calamares-settings-nitrux (1.1.16) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Thu, 05 Dec 2019 01:45:00 -0500
-
-calamares-settings-nitrux (1.1.15) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Wed, 04 Dec 2019 18:34:00 -0500
- 
-calamares-settings-nitrux (1.1.13) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Fri, 31 Aug 2018 12:09:00 -0500
-
-calamares-settings-nitrux (1.1.12) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 27 Jul 2018 21:06:00 -0500
-
-calamares-settings-nitrux (1.1.11) nxos; urgency=medium
-
-  * Update package.
-
- -- Uri Herrera <uri_herrera@nxos.org>  Sun, 22 Jul 2018 15:23:00 -0500
+ -- Uri Herrera <uri_herrera@nxos.org>  Fri, 26 Jun 2020 21:17:00 -0500
