--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.0.4) nitrux; urgency=medium
+
+* Update package.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Sat, 27 Jun 2020 19:34:00 -0500
+
 calamares-qml-settings-nitrux (0.0.3) nitrux; urgency=medium
 
 * Update package.
