--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.1.1) nitrux; urgency=medium
+
+* Update package.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Tue, 07 Jul 2020 19:33:00 -0500
+
 calamares-qml-settings-nitrux (0.1.0) nitrux; urgency=medium
 
 * Update package.
