--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.1.3) nitrux; urgency=medium
+
+* Remove unnecessary commands from before_bootloader.conf.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Mon, 27 Jul 2020 19:25:00 -0500
+
 calamares-qml-settings-nitrux (0.1.2) nitrux; urgency=medium
 
 * Set values to false for machineid (we don't use it) and partitionq.
