--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.1.4) nitrux; urgency=medium
+
+* Update package.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Wed, 29 Jul 2020 21:03:00 -0500
+
 calamares-qml-settings-nitrux (0.1.3) nitrux; urgency=medium
 
 * Remove unnecessary commands from before_bootloader.conf.
