--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.1.5) nitrux; urgency=medium
+
+* Also remove calamares-qml packages when completing installation.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Thu, 30 Jul 2020 18:30:00 -0500
+
 calamares-qml-settings-nitrux (0.1.4) nitrux; urgency=medium
 
 * Update package.
