--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.2.0) nitrux; urgency=medium
+
+  * Uninstall casper packages when finished.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Wed, 19 Aug 2020 00:20:00 -0500
+
 calamares-qml-settings-nitrux (0.1.9) nitrux; urgency=medium
 
   * Update package.
