--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.2.3) nitrux; urgency=medium
+
+  * Update version number of distribution..
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Fri, 25 Sep 2020 18:21:00 -0500
+
 calamares-qml-settings-nitrux (0.2.2) nitrux; urgency=medium
 
   * Update version number of distribution..
