--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-qml-settings-nitrux (0.2.5) nitrux; urgency=medium
+
+  * Comment contents of module entirely.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Wed, 14 Sep 2020 19:34:00 -0500
+
 calamares-qml-settings-nitrux (0.2.4) nitrux; urgency=medium
 
   * Comment commands in module, we already include the package and it will fail if there's no network.
